--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,65 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base {
+
+  :root  {
+    --background: #938d8d;
+    --foreground: 262 5% 0%;
+    --card: 262 50% 90%;
+    --card-foreground: 262 5% 10%;
+    --popover: 262 100% 95%;
+    --popover-foreground: 262 100% 0%;
+    --primary: 262 76% 57%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 262 30% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 224 30% 85%;
+    --muted-foreground: 262 5% 35%;
+    --accent: 224 30% 80%;
+    --accent-foreground: 262 5% 10%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 262 5% 90%;
+    --border: 262 30% 50%;
+    --input: 262 30% 18%;
+    --ring: 262 76% 57%;
+    --radius: 0.5rem;
+  }
+  .dark  {
+    --background: 262 50% 5%;
+    --foreground: 262 5% 90%;
+    --card: 262 50% 0%;
+    --card-foreground: 262 5% 90%;
+    --popover: 262 50% 5%;
+    --popover-foreground: 262 5% 90%;
+    --primary: 262 76% 57%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 262 30% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 224 30% 15%;
+    --muted-foreground: 262 5% 60%;
+    --accent: 224 30% 15%;
+    --accent-foreground: 262 5% 90%;
+    --destructive: 0 100% 30%;
+    --destructive-foreground: 262 5% 90%;
+    --border: 262 30% 18%;
+    --input: 262 30% 18%;
+    --ring: 262 76% 57%;
+    --radius: 0.5rem;
+  }
+  
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+  }
 }
